fixed spacing around the books

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,7 @@ button:active {
 
 .book {
   width: 140px;
+  margin: 10px;
 }
 
 .book-title,
